update 2.0.6